<resources>
    <string name="app_name">Modulos_Utiles</string>
    <string name="cambioDomicilio">Cambio de domicilio</string>
    <string name="ciudadCAMDO">Ciudad:</string>
    <string name="localidad">Localidad:</string>
    <string name="numInterior">Número interior:</string>
    <string name="telefono">Teléfono:</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="btnlogin">Entrar</string>
    <string name="recordar">Recordar</string>
    <string name="inicio">Inicio</string>
    <string name="ordenes">Ordenes</string>
    <string name="reportes">Reportes</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrarSesion">Cerrar sesión</string>
    <string name="proximo_Trabajo">Próximo trabajo</string>
    <string name="direccion">Dirección</string>
    <string name="orden">Orden</string>
    <string name="nContrato"># de contrato</string>
    <string name="btn_CAparato">Cambio aparato</string>
    <string name="btn_CDomicilio">Cambio domicilio</string>
    <string name="tab_Horas">Horas</string>
    <string name="tab_Trabajo">Trabajo</string>
    <string name="tab_Material">Material</string>
    <string name="tab_Ejecutar">Finalizar</string>
    <string name="reporte">Reporte</string>
    <string name="estatus">Estatus:</string>
    <string name="tecnico">Técnico:</string>
    <string name="contrato">Contrato:</string>
    <string name="pendiente">Pendiente</string>
    <string name="ejecutada">Ejecutada</string>
    <string name="visita">Visita</string>
    <string name="primerVisita">Visita 1</string>
    <string name="segundaVisita">Visita 2</string>
    <string name="horaInicio">Hora inicio</string>
    <string name="horaFin">Hora fin</string>
    <string name="formatoFecha">dd/MM/AAAA</string>
    <string name="formatoHora">hh:mm</string>
    <string name="tecnicoSecundario">Técnico secundario</string>
    <string name="observaciones">Observaciones</string>
    <string name="coordenadas">Coordenadas</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="ejecucion">Ejecución</string>
    <string name="btn_ejecutar">Ejecutar</string>
    <string name="statusComando">Estatus comando</string>
    <string name="espera">Espera</string>
    <string name="resultado">Resultado</string>
    <string name="salir">Salir</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="tipoDeTrabajo">Tipo de trabajo:</string>
    <string name="hora">Hora:</string>
    <string name="calle">Calle:</string>
    <string name="numero">Número:</string>
    <string name="colonia">Colonia:</string>
    <string name="nombre">Nombre:</string>
    <string name="descripcion">Descripcion</string>
    <string name="accion">Acción</string>
    <string name="recibi">Recibí</string>
    <string name="compania">Compañia</string>
    <string name="domicilio">Domicilio</string>
    <string name="tv_Nombre">Nombre</string>
    <string name="ciudad">Ciudad</string>
    <string name="servAsignados">Servicios asignados</string>
    <string name="informacion">Información</string>
    <string name="tercerVisita">Visita 3</string>
    <string name="selecAparato">Selecciona el aparato</string>
    <string name="aparatoACambiar">Aparato a cambiar</string>
    <string name="aparato">Aparato:</string>
    <string name="estadoAparato">Estado del aparato:</string>
    <string name="aparatoAsignar">Aparato a asignar</string>
    <string name="aceptar">Aceptar</string>
    //Chavos
    <string name="ordenPendiente">Orden Pendiente</string>
    <string name="ordenEjecutada">Orden Ejecutada</string>
    <string name="ordenEnVisita">Orden en Visita</string>
    <string name="ordenEnProceso">Orden en Proceso</string>
    <string name="ordenOtro">otro</string>
    <string name="quejaPendiente">Queja Pendiente</string>
    <string name="quejaEjecutada">Queja Ejecutada</string>
    <string name="quejaEnVisita">Queja en Visita</string>
    <string name="quejaEnProceso">Queja en Proceso</string>
    <string name="quejaOtro">otro</string>
    <string name="seleccionExt">Selecciona la extensión:</string>
    <string name="clasificacionMate">Clasificación de material:</string>
    <string name="descripArticu">Descripción del artículo:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="exterior">Exterior</string>
    <string name="interior">Interior</string>
    <string name="fin">Fin</string>
    <string name="agregar">Agregar</string>
    <string name="clasificacion_Problema">Clasificación del problema</string>
    <string name="prioridad">Prioridad</string>
    <string name="reporte_Cliente">Reporte del cliente</string>
    <string name="tipo_Solucion">Tipo de solución</string>
    <string name="problema_Real">Problema real</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
